Fix #353 - additional tweaks to dropdown navigation hiding sub items on mobile (which do not even render in clean) and setting radius

--- a/style/menu.css
+++ b/style/menu.css
@@ -100,6 +100,7 @@
     min-width: 250px;
     top: 100%;
     z-index: 1000;
+    border-radius: 6px;
 }
 
 .nav .dropdown-menu .icon-time{
@@ -130,6 +131,7 @@
     left: 100%;
     margin-top: -6px;
     margin-left: -1px;
+    border-radius: 6px; !important
 }
 
 @media only screen and (min-width : 1068px) {
@@ -232,6 +234,9 @@ color: [[setting:headertextcolor]];
     height: 38px;
   }
 
+.navbar .dropdown-submenu .dropdown-toggle{
+    display: none;
+}
 
   .nav-collapse .nav {
     width:100%;
